# orbit-md

./: .gitignore  Cargo.toml  LICENSE  README.md  architecture.md  orbit.yaml
.agents/: AGENTS.md
components/: Alert.hbs  Card.hbs
content/: index.md
content/docs/: getting-started.md
docs/: directive-reference.md  omd-language-spec.md  orbit-markdown-architecture.md  project-structure.md
orbit-app/: orbit.yaml
orbit-app/content/: index.md
orbit-app/content/docs/: components.md  configuration.md  getting-started.md
orbit-app/templates/: base.hbs
scaffold/: orbit.yaml
scaffold/content/: index.md
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/components/: mod.rs  parser.rs
src/dev/: mod.rs  server.rs
src/discovery/: mod.rs
src/models/: front_matter.rs  mod.rs  page.rs
src/orbit_markdown/: ast.rs  directives.rs  layout.rs  mod.rs  parser.rs  pipeline.rs  render.rs  theme.rs
src/parser/: mod.rs
src/scaffold/: mod.rs
src/template/: mod.rs
src/writer/: mod.rs
templates/: base.hbs
tests/: cli_test.rs  integration_test.rs
web/: orbit.yaml
web/content/: index.md
web/content/docs/: getting-started.md
